--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -21,8 +21,8 @@
 
                 <h3>Seleccione el tipo de oferta que publicara.</h3><br>
                 <md-radio-group ng-model="oferta.Publica">
-                    <md-radio-button class="rb md-primary" value="Publica"> Publica</md-radio-button>
-                    <md-radio-button class="rb md-primary" value="Privada"> Privada</md-radio-button>
+                    <md-radio-button class="rb md-primary" value="true"> Publica</md-radio-button>
+                    <md-radio-button class="rb md-primary" value="false"> Privada</md-radio-button>
                 </md-radio-group>
 
 
