correccion de repeat en listado de ofertasList
listado de habilidades guarado como cadena de string separados por comas
eliminado html ofertaDetallePrueba.html

--- a/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
@@ -1,37 +1,4 @@
-﻿<!--<head>
-	<meta charset="UTF-8">
-	<title>Ofertas publicadas</title>-->
-
-	<!-- COMIENZO DE CARGA DE CONTENIDOS DE ANGULAR -->
-
-	<!--<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" type="text/css" href="fonts/style.css">-->
-<!--</head>-->
-<!--<body ng-app="chipDemoApp" class="d_emp">
-<!-- Angular Material requires Angular.js Libraries -->
-<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
-<script href="/icons/avatar-icons"></script>-->
-<!-- Angular Material Library -->
-<!--<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>-->
- 
-<!-- Your application bootstrap  -->
-<!--<script type="text/javascript">    
-angular
-	.module('chipDemoApp', ['ngMaterial', 'ngMessages'])
-	.controller('chipDemoCtrl', function($scope) {
-      $scope.imagePath = 'img/post_1.jpg';
-
-	})
-</script>-->
-
-<!-- FIN DE CONTENIDO DE ANGULAR -->
-
-<md-container flex>
+﻿<md-container flex>
 	<md-content  layout="row" layout-align="center center" >
 
 		<div flex="70" layout="column" class="ofertas_p" style="margin:2em 0;">
