cambios en el ruteo de ofertas de la empresa y en el alta de ofertas

--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaContenido.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaContenido.html
@@ -2,7 +2,7 @@
 
 <div class="box-row">
     <div class="box-cell">
-        <div class="box-inner padding" ui-view id="view">
+        <div class="box-inner padding" ui-view="contenido" id="view">
         </div>
     </div>
 </div>
