--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
@@ -13,9 +13,9 @@
        <a ui-sref="empresa.ofertas">
                 <li><span class="icon-bullhorn"></span> Listado de Ofertas</li>
             </a>
-            <a ui-sref="empresa.nuevaOferta">
+            <a ui-sref="empresa.ofertas.nuevaOferta">
                 <li><span class="icon-bullhorn"></span> Agregar ofertas</li>
-            </a>
+            </a>        
     </ul>
 </div>
 
