--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -71,7 +71,8 @@
                                 </div>
                             </div>
                             <h3>{{ oferta.Descripcion }}</h3>
-                            <a ui-sref="oferta.detalle({idOferta: oferta.Id})">ver más</a>
+                            <a ui-sref="empresa.ofertas.detalleOferta({idOferta: oferta.Id})">ver más</a>
+                            <!--<a ui-sref="empresa.ofertas.detalleOferta">ver más</a>-->
                         </div>
                     </article>
 
