corrijo logout de deashboard de empresa y de profesional

--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
@@ -16,6 +16,9 @@
             <a ui-sref="empresa.ofertas.nuevaOferta">
                 <li><span class="icon-bullhorn"></span> Agregar ofertas</li>
             </a>        
+        <a ng-click="logOut()">
+            <li><span class="icon-exit icono_de"></span></li>
+        </a>
     </ul>
 </div>
 
