--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
@@ -13,6 +13,10 @@
         <a ui-sref="profesional.ofertas">
             <li><span class="icon-bullhorn"></span> Ver ofertas</li>
         </a>
+
+        <a ng-click="logOut()">
+            <li><span class="icon-exit icono_de"></span></li>
+        </a>
     </ul>
 </div>
 
