--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalContenido.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalContenido.html
@@ -1,7 +1,7 @@
 ﻿<!--#region Contenido Empresa -->
 <div class="box-row">
     <div class="box-cell">
-        <div class="box-inner padding" ui-view id="view">
+        <div class="box-inner padding" ui-view="contenido" id="view">
         </div>
     </div>
 </div>
