--- a/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
@@ -1,54 +1,48 @@
-﻿<md-dialog aria-label="Agregar puesto a la oferta" ng-cloak flex="100">
+﻿<md-dialog aria-label="Agregar puesto a la oferta" ng-cloak flex="70">
     <md-toolbar>
-        <div class="md-toolbar-tools">
-            <h2>Agregar puesto a la oferta</h2>
+        <div class="md-toolbar-tools" style="background-color:rgb(62, 138, 187);">
+            <h2 >Agregar puesto a la oferta</h2>
             <span flex></span>
             <md-button class="md-icon-button" ng-click="cancel()">
                 <md-icon class="fa fa-times"></md-icon>
             </md-button>
         </div>
     </md-toolbar>
-    <md-dialog-content style="min-width:800px;max-height:1810px; ">
+    <md-dialog-content style="min-width:800px;max-height:1810px;">
         <div class="md-dialog-content">
-            <div layout="row">
-                <div flex="50">
-                    <md-input-container>
-                        <label>Nombre del Puesto</label>
+
+            <div layout="row" layout-align="center center">
+                    <md-input-container flex="100">
+                        <label class="">Nombre del Puesto</label>
                         <input type="text" ng-model="puesto.Nombre" class="mdi-editor-border-color form-control md-input" />
                     </md-input-container>
-                </div>
-
-                <div flex="25">
-                    <md-input-container>
-                        <label>Cantidad de Vacantes</label>
-                        <input type="number" ng-model="puesto.Vacantes" class="form-control md-input" />
-                    </md-input-container>
-                </div>
-                <div flex="25">
-                    <md-input-container>
-                        <label>Remuneracion (opcional)</label>
-                        <input type="text" class="form-control md-input" ng-model="puesto.Remuneracion" />
-                    </md-input-container>
-                </div>
             </div>
-            <div layout="row">
-                <div flex="50">
-                    <md-input-container>
+
+            <div layout="row" layout-align="center center">
+                        <md-input-container flex="50">
+                            <label>Cantidad de Vacantes</label>
+                            <input type="number" ng-model="puesto.Vacantes" class="form-control md-input" />
+                        </md-input-container>
+                        <md-input-container flex="50">
+                            <label>Remuneracion (opcional)</label>
+                            <input type="text" class="form-control md-input" ng-model="puesto.Remuneracion" />
+                        </md-input-container>
+             </div>
+
+            <div layout="row" layout-align="center center">
+                    <md-input-container flex="50">
                         <md-select placeholder="Seleccionar Tipo de Contratacion" ng-model="puesto.TipoContrato">
                             <md-option ng-value="tipoCont" ng-repeat="tipoCont in tiposContrato">{{ tipoCont.Nombre }}</md-option>
                         </md-select>
                     </md-input-container>
-                </div>
-                <div flex="50">
-                    <md-input-container>
+                    <md-input-container flex="50">
                         <md-select placeholder="Seleccionar Disponibilidad" ng-model="puesto.Disponibilidad">
                             <md-option ng-value="tipoDisp" ng-repeat="tipoDisp in tiposDisponibilidad">{{ tipoDisp.Nombre }}</md-option>
                         </md-select>
                     </md-input-container>
-                </div>
             </div>
             <div layout="row">
-                <md-container>
+                <md-container flex="100">
                     <form name="frmPro">
                         <h2 class="md-title">Seleccione sus habilidades</h2>
                         <!--<md-chips ng-model="habArray"
@@ -74,7 +68,8 @@
                                   md-max-chips="5"
                                   md-transform-chip="transformChip($chip)"
                                   placeholder="Ingrese habilidad"
-                                  secondary-placeholder="ingrese otra habilidad">
+                                  secondary-placeholder="ingrese otra habilidad"
+                                  flex="100">
                             <md-autocomplete md-selected-item="selectedItem"
                                              md-search-text="searchText"
                                              md-items="item in habilidades"
@@ -133,7 +128,21 @@
                     </md-chips>
                 </div>
             </div>
-        </div>
+            <table>
+                <tr class="tab_t">
+                    <td>Nº</td>
+                    <td>Tipo de requisito</td>
+                    <td>Valoración</td>
+                    <td>Excluyente</td>
+                </tr>
+                <tr>
+                    <td class="puesto">1</td>
+                    <td>Edad</td>
+                    <td>4</td>
+                    <td>Excluyente</td>
+                </tr>
+           </table>
+</div>
 
         <!--#region fpaz Tabla de Requisitos-->
         <!--#endregion-->
