Detalle de etapa

--- a/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
@@ -39,6 +39,7 @@
                                 </timeline-heading>
                                 <p>{{etapa.TipoEtapa.Descripcion}}</p>
                                 <p>Orden: {{etapa.Orden}}</p>
+                                <a ui-sref="empresa.ofertas.etapaDetalle({idEtapa: etapa.Id})">Detalle</a>
                             </timeline-panel>
                         </timeline-event>
                     </timeline>
